# libcernvm

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  gen-hvconfig.sh  hypervisor.conf  hypervisor.config
cmake/: Libraries.cmake
doc/: Pythia8-Flow-Diagram.vsd  VirtualBox-FSM-Diagram.vsd
include/CernVM/: ArgumentList.h  Callbacks.h  CallbacksProgress.h  Config.h  CrashReport.h  DaemonCtl.h  DomainKeystore.h  DownloadProvider.h  Hypervisor.h  LocalConfig.h  ParameterMap.h  ProgressFeedback.h  SimpleFSM.h  ThinIPC.h  Threads.h  UserInteraction.h  Utilities.h
include/CernVM/Hypervisor/Virtualbox/: VBoxCommon.h  VBoxInstance.h  VBoxProbes.h  VBoxSession.h
src/: Callbacks.cpp  CallbacksProgress.h  CrashReport.cpp  DaemonCtl.cpp  DomainKeystore.cpp  DownloadProvider.cpp  Hypervisor.cpp  LocalConfig.cpp  OpenPorts.hpp  ParameterMap.cpp  ProgressFeedback.cpp  RollbackTransaction.cpp  RollbackTransaction.h  SimpleFSM.cpp  SimpleFSM.h  ThinIPC.cpp  Threads.cpp  UserInteraction.cpp  Utilities.cpp  contextiso.cpp  floppyIO.cpp  floppyIO.h
src/Hypervisor/Virtualbox/: VBoxCommon.cpp  VBoxCommon.h  VBoxInstance.cpp  VBoxInstance.h  VBoxProbes.cpp  VBoxSession.cpp  VBoxSession.h  VBoxStateStore.cpp  VBoxStateStore.h
src/Platform/osx/: CrashReportPlatf.mm  OpenPorts.cpp  OpenPorts.hpp  platform-pre.cmake
src/Platform/unix/: CrashReportPlatf.cpp
src/Platform/win/: CrashReportPlatf.cpp  StackWalker.cpp
